# LLM-Agent-ReAct

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Examples.rtf  README  README.md  pyproject.toml  requirements.txt
src/: agent_chemrxiv_tool_test.py  agent_findpapers_qa_tool_test.py  agent_literaturesearch_tool_test.py  agent_pdf_tool_test.py  agent_pubmed_tool_test.py  app.py  babyagi_new.py  base_tool.py  chemrxiv_tool.py  download_and_load_pdf_test.py  download_pdf.py  findpapers_tool.py  literature_search_tool.py  load_env_vars.py  load_pdf.py  pdf_tool.py  plan_execute_agent.py  pubmed_tools.py  qa_tool.py  test.py  test_babyagi_inner_agent.py  test_babyagi_outer_agent.py  test_self.py  test_unpaywall.py  unpaywall_tool.py
src/agents/: babyagi_inner_agent.py  babyagi_outer_agent.py  babyagi_top_down_prompts.py  findpapers_prompt.py  scholar_agent.py  scholar_prompts.py  top_down_agent.py  top_down_prompts.py
src/llm/: openai.py
src/utilities/: chemrxiv_wrapper.py
