[tool.poetry]
name = "langchain-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "langchain_hackathon"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.158"
openai = "^0.27.2"
paper-qa = "^1.4.0"
fire = "^0.5.0"
biopython = "^1.81"
arxiv = "^1.4.7"
requests = "^2.30.0"
python-dateutil = "^2.8.2"
findpapers = {git = "https://github.com/tobiasploetz/findpapers"}
sqlalchemy = "^2.0.12"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
pre-commit = "^3.3.1"
ufmt = "^2.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
